infra/k3s/base/traefik-middleware.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: weather-middleware-strip-prefix
spec:
  stripPrefix:
    prefixes:
      - /api
