infra/k3s/base/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: weather-backend
spec:
  selector:
    matchLabels:
      app: weather
      tier: backend
      env: dev
  replicas: 3
  template:
    metadata:
      labels:
        app: weather
        tier: backend
        env: dev
    spec:
      containers:
        - name: weather-backend
          image: gitea.jrzylab.xyz/ramon/weather-app/weather-backend:latest-dev
          ports:
            - containerPort: 8000
              name: backend-port
          resources:
            requests:
              memory: 256Mi
              cpu: 250m
            limits:
              memory: 512Mi
              cpu: 500m
          volumeMounts:
            - name: sqlitedb
              mountPath: /data
      imagePullSecrets:
        - name: registry-login
      volumes:
        - name: sqlitedb
          nfs:
            server: nfs.jrzylab.xyz
            path: /data/app_data/weather-app
            readOnly: false
      nodeSelector:
        node-role.kubernetes.io/worker: "true"
