infra/k3s/base/frontend-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: weather-frontend
spec:
  selector:
    matchLabels:
      app: weather
      tier: frontend
      env: dev
  replicas: 3
  template:
    metadata:
      labels:
        app: weather
        tier: frontend
        env: dev
    spec:
      containers:
        - name: weather-frontend
          image: gitea.jrzylab.xyz/ramon/weather-app/weather-frontend:latest-dev
          ports:
            - containerPort: 3000
              name: frontend-port
          resources:
            requests:
              memory: 256Mi
              cpu: 250m
            limits:
              memory: 512Mi
              cpu: 500m
          volumeMounts:
            - name: sqlitedb
              mountPath: /data
      volumes:
        - name: sqlitedb
          nfs:
            server: nfs.jrzylab.xyz
            path: /data/app_data/weather-app
            readOnly: false
      nodeSelector:
        node-role.kubernetes.io/worker: "true"
