infra/k3s/base/backend-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: weather-backend
spec:
  selector:
    app: weather
    tier: backend
    env: dev
  ports:
    - name: entry
      protocol: TCP
      port: 8000
      targetPort: backend-port
